# Robotics

./: .gitignore  README.md  pyproject.toml  requirements-advanced.txt  requirements.txt
data/: README.md
docs/: 00_mastery_map.md  glossary.md  hardware_lab_guide.md  latest_open_source_advancements_2026.md  mastery_rubric.md  notebook_index.md  offline_learning_guide.md  open_source_humanoid_resources_2026.md  optimus_like_humanoid_track.md  research_reading_roadmap.md  robot_learning_stack.md  safety_first.md  software_toolchain_2026.md  study_schedule_24_weeks.md  study_schedule_40_weeks.md  zero_to_hero_course.md
exercises/: exercise_bank.md  hints.md
notebooks/: 01_basics_robot_loop.ipynb  02_kinematics_frames.ipynb  03_dynamics_control.ipynb  04_sensing_state_estimation.ipynb  05_mapping_slam_intro.ipynb  06_motion_planning.ipynb  07_imitation_learning.ipynb  08_reinforcement_learning.ipynb  09_modern_robot_learning_vla.ipynb  10_capstone_robot_stack.ipynb  11_math_for_robotics.ipynb  12_spatial_math_se3.ipynb  13_robot_dynamics_energy.ipynb  14_trajectory_generation.ipynb  15_lqr_mpc_control.ipynb  16_mobile_robot_models.ipynb  17_manipulator_jacobian_control.ipynb  18_computer_vision_geometry.ipynb  19_lidar_point_clouds_icp.ipynb  20_grasping_manipulation.ipynb  21_ros2_architecture.ipynb  22_simulation_domain_randomization.ipynb  23_robot_dataset_engineering.ipynb  24_behavior_cloning_numpy_mlp.ipynb  25_diffusion_policy_intuition.ipynb  26_continuous_control_rl_cem.ipynb  27_robot_safety_reliability.ipynb  28_multi_robot_coordination.ipynb  (+22 more)
(+16 files in other folders)
